--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1>hello world</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>hello world</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt sint
+      iure, temporibus rem delectus praesentium esse, veniam, fuga omnis labore
+      optio? Ab rem voluptates veritatis alias in. Fuga, doloribus praesentium?
+    </p>
+  </body>
 </html>
