--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
       aliquam consequuntur aperiam eos nisi, cupiditate placeat, quae saepe
       ipsa?
     </p>
+    <button>hola</button>
   </body>
 </html>
