--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt sint
       iure, temporibus rem delectus praesentium esse, veniam, fuga omnis labore
       optio? Ab rem voluptates veritatis alias in. Fuga, doloribus praesentium?
+    </p>
+    <a href="https://www.google.cl">link a google</a>
   </body>
 </html>
