--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
       optio? Ab rem voluptates veritatis alias in. Fuga, doloribus praesentium?
     </p>
     <a href="https://www.google.cl">link a google</a>
+    <button>otro boton</button>
   </body>
 </html>
