--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     </p>
     <a href="https://www.google.cl">link a google</a>
     <button>otro boton</button>
+    <h2>mi primer cambio en git hub pages</h2>
   </body>
 </html>
