--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
     <a href="https://www.google.cl">link a google</a>
     <button>otro boton</button>
     <h2>mi primer cambio en git hub pages</h2>
+    <h3>lolo</h3>
   </body>
 </html>
