--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
     <button>otro boton</button>
     <h2>mi primer cambio en git hub pages</h2>
     <h3>lolo</h3>
+    <h2>mi conflicto</h2>
   </body>
 </html>
