--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
     <button>otro boton</button>
     <h2>mi primer cambio en git hub pages</h2>
     <h3>lolo</h3>
-    <h2>mi conflicto</h2>
+    <h2>mi conflicto 6</h2>
   </body>
 </html>
