--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       optio? Ab rem voluptates veritatis alias in. Fuga, doloribus praesentium?
     </p>
     <a href="https://www.google.cl">link a google</a>
+
+
+    <footer>
+      Esto es un footer. Todos los derechos reservados
+    </footer>
     <button>otro boton</button>
   </body>
 </html>
