--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     </p>
     <a href="https://www.google.cl">link a google</a>
     <button>otro boton</button>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint aliquam fuga repudiandae dolore sequi minima ratione, at qui fugit obcaecati facere officia cupiditate expedita magni. Vitae dignissimos sapiente minima consectetur. 20.29 03-06-2024</p>
   </body>
 </html>
